--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.0",
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "@playwright/test": "^1.40.0",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
     "axios": "^1.6.2",
-    "sharp": "^0.33.0"
+    "dotenv": "^16.3.1",
+    "groq-sdk": "^0.37.0",
+    "sharp": "^0.33.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
