--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.0",
     "@playwright/test": "^1.40.0",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
     "axios": "^1.6.2",
-    "sharp": "^0.33.0"
+    "dotenv": "^16.3.1",
+    "openai": "^6.22.0",
+    "sharp": "^0.33.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
