Fix: Install Playwright browsers on Railway and specify config
Railway issues fixed:
- Added Chromium browser installation with system dependencies
- Added required Linux packages (libnss3, libatk-bridge, etc.)
- Specified --config path for Playwright test command
- Use --project=chromium to run only Chromium (faster, lighter)
- Added 'npx playwright install chromium --with-deps' to build

This fixes the instant test failures (0ms duration) caused by missing browsers.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,13 @@
 [phases.setup]
 nixPkgs = ['nodejs']
+aptPkgs = ['chromium', 'chromium-driver', 'libnss3', 'libatk-bridge2.0-0', 'libdrm2', 'libxkbcommon0', 'libgbm1', 'libasound2']
 
 [phases.install]
-cmds = ['npm install --production=false', 'cd server && npm install']
+cmds = [
+  'npm install --production=false', 
+  'cd server && npm install',
+  'npx playwright install chromium --with-deps'
+]
 
 [start]
 cmd = 'cd server && npm start'
