Fix: Use Nix packages instead of apt for Railway Chromium installation
Railway uses Nix package manager, not apt-get. Fixed configuration:

nixpacks.toml:
- Removed invalid 'aptPkgs' directive
- Added chromium and all required system libraries to nixPkgs array
- Includes: nss, atk, gtk3, mesa, libxkbcommon, alsaLib, X11 libs, etc.
- Set PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 to use system chromium

playwright.config.js:
- Detect Railway environment via RAILWAY_ENVIRONMENT variable
- Use system 'chromium' executable instead of bundled browser
- Add required headless flags: --no-sandbox, --disable-setuid-sandbox
- Disable GPU and shared memory for containerized environment

This fixes the 'failed to build: apt-get exit code 100' error.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,11 @@
 [phases.setup]
-nixPkgs = ['nodejs']
-aptPkgs = ['chromium', 'chromium-driver', 'libnss3', 'libatk-bridge2.0-0', 'libdrm2', 'libxkbcommon0', 'libgbm1', 'libasound2']
+nixPkgs = ['nodejs', 'chromium', 'nss', 'nspr', 'atk', 'cups', 'dbus', 'libdrm', 'gtk3', 'pango', 'cairo', 'xorg.libX11', 'xorg.libXcomposite', 'xorg.libXdamage', 'xorg.libXext', 'xorg.libXfixes', 'xorg.libXrandr', 'mesa', 'libxkbcommon', 'alsaLib', 'expat']
 
 [phases.install]
 cmds = [
   'npm install --production=false', 
   'cd server && npm install',
-  'npx playwright install chromium --with-deps'
+  'PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npx playwright install-deps || true'
 ]
 
 [start]
