Simplify: Use Playwright's built-in browser installer instead of Nix
Railway deployment was failing with complex Nix setup. Switching to simpler approach:

nixpacks.toml:
- Remove all complex Nix chromium packages
- Use 'npx playwright install --with-deps chromium' (official method)
- Playwright handles browser + system deps automatically
- Much faster and more reliable on cloud platforms

playwright.config.js:
- Don't override executablePath (use bundled browser)
- Only add container-safe flags on Railway
- Simpler configuration, fewer failure points

This should fix both:
- Browser executable not found error
- Railway deployment failures/timeouts

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-nixPkgs = ['nodejs', 'chromium', 'nss', 'nspr', 'atk', 'cups', 'dbus', 'libdrm', 'gtk3', 'pango', 'cairo', 'xorg.libX11', 'xorg.libXcomposite', 'xorg.libXdamage', 'xorg.libXext', 'xorg.libXfixes', 'xorg.libXrandr', 'mesa', 'libxkbcommon', 'alsaLib', 'expat']
+nixPkgs = ['nodejs']
 
 [phases.install]
 cmds = [
   'npm install --production=false', 
   'cd server && npm install',
-  'PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npx playwright install-deps || true'
+  'npx playwright install --with-deps chromium'
 ]
 
 [start]
