--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.0",
+    "@playwright/mcp": "^0.0.68",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "openai": "^6.22.0",
